simplifying layout of figwindow (decluttering)

--- a/FigUI/handler/Code/html/static/html_editor.html
+++ b/FigUI/handler/Code/html/static/html_editor.html
@@ -154,7 +154,7 @@
 
 <div style="display: inline-block; text-align: left">
 <p style="font-family: Monospace; text-align: center">
-    <select style="text-align: center; background-color: #292929; color: #32a852; font-family: Monospace; border: 0px; outine: none;" onchange="selectTheme()" id=select>
+    <select style="text-align: center; background-color: #292929; color: #32a852; font-family: Monospace; border: 0px; outline: none;" onchange="selectTheme()" id=select>
     <option selected>default</option>
     <option>3024-day</option>
     <option>3024-night</option>
