--- a/FigUI/handler/Code/static/code.html
+++ b/FigUI/handler/Code/static/code.html
@@ -6,6 +6,32 @@
         <!-- core styling -->
         <!-- <link rel="stylesheet" href="{{ MINIMAP_MIN_CSS }}" /> -->
 		
+        <style>
+            /* Chrome, safari */
+            *::-webkit-scrollbar {
+                width: 7px;
+                height: 7px;
+            }    
+            *::-webkit-scrollbar-track {
+                background-color: rgba(235, 235, 235, 0.1);
+            }
+    
+            *::-webkit-scrollbar-thumb {
+                background-color: gray;
+            }
+            *::-webkit-scrollbar-thumb:hover {
+                background-color: orange;
+            }
+            *::-webkit-scrollbar-corner {
+                background-color: transparent;
+                /* background: rgba(235, 235, 235, 0.1); */
+            }
+            /* Firefox */
+            /* .selector {
+                scrollbar-width: none;
+            } */
+        </style>
+
         <!-- Minimap sources -->
         <link rel="stylesheet" type="text/css" href="sublimeScroll.css">
         <link rel="stylesheet" type="text/css" href="sublimeScrollLite.css">
@@ -149,80 +175,80 @@
             <div class="wrapper">
             </div>
         </header> -->
-            <textarea id="codemirror">
-{{ CODE_FILE_CONTENT }}
-            </textarea>
-            <div style="margin-left: auto; margin-right: auto;">
-                <p><span style="color: white; font-size: 13px">Select a theme </span>
-                    <select onchange="selectTheme()" id=select>
-                    <option>default</option>
-                    <option>3024-day</option>
-                    <option>3024-night</option>
-                    <option>abbott</option>
-                    <option>abcdef</option>
-                    <option>ambiance</option>
-                    <option selected>ayu-dark</option>
-                    <option>ayu-mirage</option>
-                    <option>base16-dark</option>
-                    <option>base16-light</option>
-                    <option>bespin</option>
-                    <option>blackboard</option>
-                    <option>cobalt</option>
-                    <option>colorforth</option>
-                    <option>darcula</option>
-                    <option>dracula</option>
-                    <option>duotone-dark</option>
-                    <option>duotone-light</option>
-                    <option>eclipse</option>
-                    <option>elegant</option>
-                    <option>erlang-dark</option>
-                    <option>gruvbox-dark</option>
-                    <option>hopscotch</option>
-                    <option>icecoder</option>
-                    <option>idea</option>
-                    <option>isotope</option>
-                    <option>juejin</option>
-                    <option>lesser-dark</option>
-                    <option>liquibyte</option>
-                    <option>lucario</option>
-                    <option>material</option>
-                    <option>material-darker</option>
-                    <option>material-palenight</option>
-                    <option>material-ocean</option>
-                    <option>mbo</option>
-                    <option>mdn-like</option>
-                    <option>midnight</option>
-                    <option>monokai</option>
-                    <option>moxer</option>
-                    <option>neat</option>
-                    <option>neo</option>
-                    <option>night</option>
-                    <option>nord</option>
-                    <option>oceanic-next</option>
-                    <option>panda-syntax</option>
-                    <option>paraiso-dark</option>
-                    <option>paraiso-light</option>
-                    <option>pastel-on-dark</option>
-                    <option>railscasts</option>
-                    <option>rubyblue</option>
-                    <option>seti</option>
-                    <option>shadowfox</option>
-                    <option>solarized dark</option>
-                    <option>solarized light</option>
-                    <option>the-matrix</option>
-                    <option>tomorrow-night-bright</option>
-                    <option>tomorrow-night-eighties</option>
-                    <option>ttcn</option>
-                    <option>twilight</option>
-                    <option>vibrant-ink</option>
-                    <option>xq-dark</option>
-                    <option>xq-light</option>
-                    <option>yeti</option>
-                    <option>yonce</option>
-                    <option>zenburn</option>
-                </select>
-                </p>
+        <div style="margin-left: auto; margin-right: auto;">
+            <p><span style="color: white; font-size: 13px">Select a theme </span>
+                <select style="text-align: center; background-color: #292929; color: #32a852; font-family: Monospace; border: 0px; outline: none;"  onchange="selectTheme()" id=select>
+                <option>default</option>
+                <option>3024-day</option>
+                <option>3024-night</option>
+                <option>abbott</option>
+                <option>abcdef</option>
+                <option>ambiance</option>
+                <option selected>ayu-dark</option>
+                <option>ayu-mirage</option>
+                <option>base16-dark</option>
+                <option>base16-light</option>
+                <option>bespin</option>
+                <option>blackboard</option>
+                <option>cobalt</option>
+                <option>colorforth</option>
+                <option>darcula</option>
+                <option>dracula</option>
+                <option>duotone-dark</option>
+                <option>duotone-light</option>
+                <option>eclipse</option>
+                <option>elegant</option>
+                <option>erlang-dark</option>
+                <option>gruvbox-dark</option>
+                <option>hopscotch</option>
+                <option>icecoder</option>
+                <option>idea</option>
+                <option>isotope</option>
+                <option>juejin</option>
+                <option>lesser-dark</option>
+                <option>liquibyte</option>
+                <option>lucario</option>
+                <option>material</option>
+                <option>material-darker</option>
+                <option>material-palenight</option>
+                <option>material-ocean</option>
+                <option>mbo</option>
+                <option>mdn-like</option>
+                <option>midnight</option>
+                <option>monokai</option>
+                <option>moxer</option>
+                <option>neat</option>
+                <option>neo</option>
+                <option>night</option>
+                <option>nord</option>
+                <option>oceanic-next</option>
+                <option>panda-syntax</option>
+                <option>paraiso-dark</option>
+                <option>paraiso-light</option>
+                <option>pastel-on-dark</option>
+                <option>railscasts</option>
+                <option>rubyblue</option>
+                <option>seti</option>
+                <option>shadowfox</option>
+                <option>solarized dark</option>
+                <option>solarized light</option>
+                <option>the-matrix</option>
+                <option>tomorrow-night-bright</option>
+                <option>tomorrow-night-eighties</option>
+                <option>ttcn</option>
+                <option>twilight</option>
+                <option>vibrant-ink</option>
+                <option>xq-dark</option>
+                <option>xq-light</option>
+                <option>yeti</option>
+                <option>yonce</option>
+                <option>zenburn</option>
+            </select>
+            </p>
         </div>
+<textarea id="codemirror">
+{{ CODE_FILE_CONTENT }}
+</textarea>
         <!-- core javascript source -->
         <script src="https://codemirror.net/lib/codemirror.js"></script>
         <!-- addons -->
