get rid of rendered terminal html

--- a/FigUI/FigTerminal/static/terminal.html
+++ b/FigUI/FigTerminal/static/terminal.html
@@ -4,6 +4,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://unpkg.com/jquery.terminal/js/jquery.terminal.min.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/jquery.terminal/css/jquery.terminal.min.css" />
+        <script src="{{ QWEBCHANNEL_JS }}"></script>
         <style>
             /* Chrome, safari */
             *::-webkit-scrollbar {
@@ -36,6 +37,7 @@
                 hello: function(what) {
                     this.echo('Hello, ' + what +
                               '. Wellcome to this terminal.');
+                    
                 }
             }, {
                 greetings: 'My First Web Terminal'
