added FigTerminal to FigWindow

--- a/FigUI/FigTerminal/static/terminal.html
+++ b/FigUI/FigTerminal/static/terminal.html
@@ -40,7 +40,7 @@
                     
                 }
             }, {
-                greetings: 'My First Web Terminal'
+                greetings: 'Hello minion <img src="https://banner2.cleanpng.com/20180202/vuq/kisspng-emoji-hug-emoticon-emoji-face-png-transparent-image-5a7540b97d0935.8993872215176337215122.jpg"/>'
             });
             </script>
     </body>
